--- a/style.css
+++ b/style.css
@@ -108,28 +108,30 @@ header p {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 30px;
-  margin: 80px auto;
   flex-wrap: wrap;
+  gap: 20px;
+  margin: 60px auto;
 }
 
 .preco-img {
-  width: 450px;
-  height: 280px;
+  width: 440px;
+  height: auto;
+  max-height: 500px;
   object-fit: contain;
   background-color: #000;
   border-radius: 16px;
   box-shadow: 0 0 20px rgba(0, 13, 255, 0.5);
 }
 
-
 .preco {
   background: #2a0a0a;
   padding: 60px 40px;
   border-radius: 24px;
-  max-width: 600px;
+  max-width: 500px;
   box-shadow: 0 0 30px rgba(0, 85, 255, 0.6);
+  flex: 1;
 }
+
 
 .preco h2 {
   background-color: rgb(0, 21, 255);
